--- a/src/App.css
+++ b/src/App.css
@@ -1,135 +1,11 @@
-/* Estilos generales */
-
-/* Estilos generales */
 .App {
-  text-align: center;
+  display: flex;
   min-height: 100vh;
   background-color: #05161A;
-  /*margin-top: 56px; /* Agrega margen superior para la barra de navegación */
-  
-  position: relative;
 }
 
-.sidebar {
-  position: fixed;
-  overflow-y: scroll;
-  z-index: 1000;
-}
-
-main {
-  padding: 100px;
-  color: white;
-  text-align: center;
-}
-
-main h2 {
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  color:white;
-  
-}
-
-main p {
-  text-align: center;
-  font-family: 'Handjet';
-  color:white;
-  font-size: 20px;
-
-}
-
-#block {
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.img-fluid {
-  width: 80%;
-  max-width: 300px;
-}
-
-/* Estilos para el encabezado */
-.navbar {
-  margin-bottom: 20px;
-  background-color: #6DA5C0;
-}
-
-/* Estilos para los enlaces del encabezado */
-.navbar-nav .nav-link {
-  color: white;
-  margin-right: 15px;
-}
-
-/* Cambiar el color de los enlaces al pasar el mouse sobre ellos */
-.navbar-nav .nav-link:hover {
-  color: #6DA5C0;
-}
-
-/* Estilos para la sección de proyectos */
-#projects {
-  padding: 50px 0;
-  background-color: #05161A;
-}
-
-/* Estilos para las tarjetas de proyectos */
-.project-card {
-  background-color: #ffffff;
-  border-radius: 10px;
-  padding: 20px;
-  margin-bottom: 20px;
-}
-
-/* Cambiar el color de fondo de las tarjetas al pasar el mouse sobre ellas */
-.project-card:hover {
-  background-color: #6DA5C0;
-}
-
-/* Estilos para los títulos de las tarjetas de proyectos */
-.project-title {
-  font-size: 20px;
-  color: #05161A;
-  margin-top: 10px;
-}
-
-
-/* Estilos para las descripciones de las tarjetas de proyectos */
-.project-description {
-  font-size: 16px;
-  color: #4c4c4c;
-  margin-top: 10px;
-}
-
-/* Estilos para las tarjetas de habilidades */
-.skill-card {
-  background-color: #ffffff;
-  border-radius: 10px;
-  padding: 20px;
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 250px; /* Altura fija para todas las tarjetas */
-}
-
-.skill-card img {
-  max-width: 40px;
-  max-height: 40px;
-  margin: 5px;
-}
-
-/* Cambiar el color de fondo de las tarjetas al pasar el mouse sobre ellas */
-.skill-card:hover {
-  background-color: #6DA5C0;
-}
-
-/* components/Perfil.css */
-.perfil-text {
-  padding:80px;
-  color: white;
-  text-align: justify;
-}
-
-.image-grid img {
-  max-width: 100%;
-  height: auto;
+.separator-gradient {
+  height: 4px;
+  background: linear-gradient(to right, #f06, transparent);
+  margin: 30px 0;
 }
